<resources>
    <string name="app_name">NoteSharing</string>
    <string name="title_home">Home</string>
    <string name="title_annunci_salvati">Preferiti</string>
    <string name="title_annunci_personali">Personali</string>
    <string name="title_mappa">Mappa</string>

    <string-array name="spinner_options">
        <item>Materiale Digitale</item>
        <item>Materiale Fisico</item>
    </string-array>
    <string-array name="area_spinner_options">
        <item>Area Sportiva</item>
        <item>Area Giuridico-Economica</item>
        <item>Area Sanitaria</item>
        <item>Area Scientifica</item>
        <item>Area delle Scienze Umane e Sociali</item>
    </string-array>
    <string name="downloadMD">Scarica il materiale digitale</string>
    <string name="hintComuneRitiro">Comune di ritiro</string>
    <string name="hintCapRitiro">CAP di ritiro</string>
    <string name="hintAnnoCreazioneNuovo">Inserisci l\'anno di creazione del materiale</string>
    <string name="hintArea">Area di riferimento</string>
    <string name="hintDescrizioneMF">Inserisci la descrizione del materiale fisico</string>
    <string name="hintCostoMateriale">Costo del materiale</string>
    <string name="hintNrCivicoRitiro">Numero civico per il ritiro</string>
    <string name="hintProvinciaRitiro">Provincia di ritiro</string>
    <string name="indietro">Indietro</string>
    <string name="creaAnnuncio">Crea Annuncio</string>
    <string name="hintDescrPDF">Inserisci la descrizione del PDF</string>
    <string name="selezionaPDF">Seleziona PDF</string>
    <string name="hintNomeAnnuncio">Inserisci il nome dell\'annuncio</string>
    <string name="avanti">Continua</string>
    <string name="cancella">Cancella</string>
    <string name="hintDescrAnnuncio">Inserisci la descrizione dell\'annuncio</string>
    <string name="hintViaRitiro">Inserisci la via di ritiro</string>
    <string name="titolo_appbar_nuovo_materiale_digitale">Nuovo Materiale Digitale</string>
    <string name="titolo_appbar_nuovo_materiale_fisico">Nuovo Materiale Fisico</string>
    <string name="titolo_appbar_nuovo_annuncio">Nuovo Annuncio</string>
    <string name="proprietarioEmail">E-mail proprietario: %1$s</string>
    <string name="costo">Costo: %1$d</string>
    <string name="anno_riferimento">Anno di riferimento: %1$d</string>
    <string name="PDFSelezionati">PDF selezionati: %1$d</string>
    <string name="corso_riferimento">Corso di riferimento: %1$s</string>
    <string name="indirizzo_ritiro">Indirizzo di ritiro: %1$s %2$s %3$s %4$d</string>
    <string name="cerca_annuncio">Cerca un annuncio</string>


    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="login">Entra</string>
    <string name="erroreLogin">Inserisci i dati</string>
    <string name="signup">Registrati</string>
    <string name="signupGoogle">Registrati con Google</string>

    <string name="hintUsernameSignUp">Username</string>
    <string name="hintEmailSignUp">Email</string>
    <string name="hintPasswordSignUp">Password</string>
    <string name="hintCodiceFiscaleSignUp">Codice Fiscale</string>
    <string name="hintNomeSignUp">Nome</string>
    <string name="hintCognomeSignUp">Cognome</string>
    <string name="hintProvinciaSignUp">Provincia</string>
    <string name="hintComuneSignUp">Comune</string>
    <string name="hintViaSignUp">Via</string>
    <string name="hintNumeroCivicoSignUp">Numero civico</string>
    <string name="hintCAPSignUp">CAP</string>
    <string name="hintDataDiNascitaSignUp">Data di nascita</string>
    <string name="erroreSignUp">Inserisci tutti i dati</string>
    <string name="confermaSignUp">Conferma</string>
    <string name="nomeApp">NoteSharig</string>
    <string name="searchHint">Cerca</string>

    <string name="areaScientifica">Area Scientifica</string>
    <string name="areaSportiva">Area Sportiva</string>
    <string name="areaGiuridicoEconomica">Area Giuridico-Economica</string>
    <string name="areaSanitaria">Area Sanitaria</string>
    <string name="areaScienzeUmaneSociali">Area Scienze Umane-Sociali</string>
    <string name="completta_tutti_campi">Controlla che tutti i dati inseriti sono corretti</string>
    <string name="attendi_caricamento">Attendi il caricamento dei file</string>
    <string name="logout">Log Out</string>
    <string name="cambiopsw">Cambio password</string>
    <string name="hello_user">Ciao %1$s</string>
    <string name="old_psw">Password attuale</string>
    <string name="new_psw">Password nuova</string>
    <string name="psw_changed_successful">Password cambiata con successo</string>
    <string name="psw_not_changed">Errore - Password non cambiata</string>
    <string name="apri_mappa">Apri mappa</string>
    <string name="aggiornaMappa">Aggiorna la mappa</string>
</resources>