<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/editT_username_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintUsernameSignUp"
        android:inputType="text"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/editT_via"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintViaSignUp"
        android:inputType="text"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="486dp" />

    <EditText
        android:id="@+id/editT_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintCAPSignUp"
        android:inputType="text"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="596dp" />

    <EditText
        android:id="@+id/editT_password_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintPasswordSignUp"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="157dp" />

    <EditText
        android:id="@+id/editT_numero_civico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintNumeroCivicoSignUp"
        android:inputType="number"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="543dp" />

    <EditText
        android:id="@+id/editT_data_di_nascita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintDataDiNascitaSignUp"
        android:inputType="date"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="651dp" />

    <EditText
        android:id="@+id/editT_provincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintProvinciaSignUp"
        android:inputType="text"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="372dp" />

    <EditText
        android:id="@+id/editT_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintNomeSignUp"
        android:inputType="text"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="265dp" />

    <EditText
        android:id="@+id/editT_comune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintComuneSignUp"
        android:inputType="text"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="430dp" />

    <EditText
        android:id="@+id/editT_email_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintEmailSignUp"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="105dp" />

    <EditText
        android:id="@+id/editT_cognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintCognomeSignUp"
        android:inputType="text"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="319dp" />

    <EditText
        android:id="@+id/editT_codice_fiscale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintCodiceFiscaleSignUp"
        android:inputType="text"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="213dp" />

    <Button
        android:id="@+id/btn_conferma_registrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confermaSignUp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="755dp" />

    <TextView
        android:id="@+id/tv_errore_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erroreSignUp"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="712dp" />

</androidx.constraintlayout.widget.ConstraintLayout>