<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.clientnotesharing.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.clientnotesharing.ui.annunci_salvati.AnnunciSalvatiFragment"
        android:label="@string/title_annunci_salvati"
        />

    <fragment
        android:id="@+id/navigation_annunci_personali"
        android:name="com.example.clientnotesharing.ui.annunci_personali.AnnunciPersonaliFragment"
        android:label="@string/title_annunci_personali"
        tools:layout="@layout/fragment_personali"
        />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.clientnotesharing.ui.settings.SettingsFragment"
        android:label="@string/title_impostazioni"
        tools:layout="@layout/fragment_settings" />
</navigation>